# kstatusicon

./: CMakeLists.txt  README  clean-all  main.cpp  settings.cpp  test-kstatusicon.sh  timeedit.cpp  toggle-mike-mute.sh  toplevel.cpp  toplevel.h
